# focus-pro

./: index.html  package-lock.json  package.json  projection.html  vite.config.ts
src/: App.css  App.tsx  projection-main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CamerasPanel.tsx  LibraryPanel.tsx  MonitorPanel.tsx  SettingsPanel.tsx  StatusPanel.tsx  TransitionBar.tsx
